# papyrus-scaffold-visualizer

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  setup.cfg  setup.py
bindingpocketfilter/: cluster_analysis.ipynb  clustering.py  interactive_cluster.py
clustering/: __init__.py  descriptors.py  manifold.py  scaffolds.py
data/: dataset.py
depiction/: __init__.py  plot.py
examples/: example_coloring.py  example_data.py  example_depiction.py  example_depiction_custom.py  example_depiction_papyrus.py  example_depiction_smiles.py  example_model.py  example_pca.py  example_readme.py  example_umap.py  utils.py
papyrus/: DataAnalysis.ipynb  __init__.py  datapreparation.ipynb  download.py  papyrus_filter.py  split_data.py
src/: __init__.py
src/clustering/: manifold.py
src/data/: dataset.py
src/data/papyrus/: papyrus_class.py
src/depiction/: plot.py
src/scaffviz/: __init__.py
src/scaffviz/clustering/: descriptors.py  manifold.py
src/scaffviz/data/: __init__.py  dataset.py  manifold_table.py
src/scaffviz/data/papyrus/: papyrus_class.py  papyrus_filter.py
src/scaffviz/depiction/: plot.py
