##########################
# Setup.py Configuration #
##########################
[metadata]
name = papyrus-scaffold-visualizer
long_description = file: README.md
long_description_content_type = text/markdown

# Search tags
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =

[options]
install_requires =
    numpy
    pandas
    scikit-learn
    rdkit
    molplotly
    qsprpred @ git+https://github.com/CDDLeiden/QSPRPred.git@main

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.10

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = *

;[options.package_data]
;* = test_files/*.*, test_data/*.*
